JVM8: Remove PermSize and MaxPermSize options
PermSize and MaxPermSize JVM options are not supported in Oracle Java 8.
Since Boron only supports Java 8, they no longer need to be set. This
avoids the following warning: "Java HotSpot(TM) 64-Bit Server VM
warning: ignoring option MaxPermSize=512m; support was removed in 8.0"

Change-Id: I9a8158113746db9a1edf5d7f62a3aaf24a652143
Signed-off-by: Lorand Jakab <lojakab@cisco.com>